--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 body{
     background-image: url("../img/bg.jpg");
     background-size: cover;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 span{
@@ -9,8 +14,8 @@ span{
 
 .row{
     background-color: rgba(255, 255, 255, 0.2);
-    padding: 2em;
-    margin-top: 2em;
+    padding: 1em;
+    margin-top: 1em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     border-radius: 1em;
 }
