--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body{
-    background-image: url("../img/bg.jpg");
     background-size: cover;
     padding: 0;
     margin: 0;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    background-image: url(../img/bg.jpg);
 }
 
 span{
