--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,16 @@ span{
     cursor: pointer;
 }
 
-.row{
+.row.holder{
     background-color: rgba(255, 255, 255, 0.2);
     padding: 1em;
     margin-top: 1em;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     border-radius: 1em;
+}
+
+.row.divider{
+    border-left: 5px solid rgba(255, 255, 255, 0.3);
 }
 
 .btn{
