--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,21 @@ span{
 #filename:hover{
     opacity: 0.8;
 }
+
+#addButton{
+    background-color: rgb(119, 119, 119);
+    border-radius: 50em;
+    font-size: 3em;
+    color: white;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3); 
+}
+
+#addButton:hover{
+    opacity: 0.8;
+}
+
+#addButtonHolder{
+    padding-top: 0.6em;
+}
