--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/**
+HTML OVERRIDES
+**/
 body{
     background-size: cover;
     padding: 0;
@@ -12,6 +15,38 @@ span{
     cursor: pointer;
 }
 
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+/**
+BOOTSTRAP OVERRIDES
+**/
+.btn{
+    margin-top: 0.5em;
+    padding: 1em;
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
+    cursor: pointer;
+    font-weight: 400;
+    text-shadow: 1px 1px 0px black;
+    color: white;
+}
+
+.btn:hover{
+    opacity: 0.9;
+    box-shadow: 0px 0px 10px white;
+}
+
+.dropdown-menu{
+    background-color: rgba(255, 255, 255, 0.6);
+    border-color: white;
+}
+
+/**
+CUSTOM CLASSES
+**/
 .row.holder{
     background-color: rgba(255, 255, 255, 0.2);
     padding: 1em;
@@ -24,16 +59,6 @@ span{
     border-left: 5px solid rgba(255, 255, 255, 0.3);
 }
 
-.btn{
-    margin-top: 0.5em;
-    padding: 1em;
-    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.3);
-    cursor: pointer;
-    font-weight: 400;
-    text-shadow: 1px 1px 0px black;
-    color: white;
-}
-
 .btn-group.special {
     display: flex;
 }
@@ -42,21 +67,44 @@ span{
     flex: 1
 }
 
-.btn:hover{
-    opacity: 0.9;
-    box-shadow: 0px 0px 10px white;
-}
-
 .volume{
     font-size: 0.5em;
     color: black;
 }
 
-.dropdown-menu{
-    background-color: rgba(255, 255, 255, 0.6);
-    border-color: white;
+.cmenu-link{
+    border-bottom: 1px solid #ccc;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
+.cmenu-link:hover{
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.cmenu-link a{
+    color: #222;
+}
+
+.cmenu-link a{
+    text-decoration: none;
+    text-shadow: 0px 0px 2px white;
+}
+
+.cmenu-link:last-of-type{
+    border-bottom-left-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
+}
+
+.cmenu-link:first-of-type{
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+}
+
+
+/**
+ID's
+**/
 #tracks{
     display: none;
 }
@@ -81,4 +129,15 @@ span{
 
 #addButtonHolder{
     padding-top: 0.6em;
+}
+
+#contextmenu{
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: 90;
+   background-color: rgba(255, 255, 255, 0.7);
+   border-radius: 0.5em;
+   border: 1px solid white;
+   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
