--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,12 @@ ID's
    border: 1px solid white;
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
+
+#colorPicker{
+    max-width: 1px;
+    max-height: 1px;
+    position: absolute;
+    top: -100;
+    left: -200;
+    opacity: 0;
+}
