--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@ body{
     background-size: cover;
     padding: 0;
     margin: 0;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     background-image: url(../img/bg.jpg);
 }
 
@@ -103,6 +103,12 @@ CUSTOM CLASSES
 
 .buttonTitle{
     min-width: 2px;
+}
+
+.buttonTitle[contentEditable="true"]{
+    background-color: white;
+    color: black;
+    padding-left: 4px;
 }
 
 
